introduction part added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,29 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="intro-section">
+            <div>
+                <h2 class="introText">
+                    Stylish Portfolio is the perfect theme for your next project!
+                </h2>
+            </div>
+            <div>
+                <p class="introParag">
+                    This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
+                    <a href="#">
+                        Unsplash !
+                    </a>
+                </p>
+            </div>
+            <div>
+                <button class="offerButton">
+                    What We Offer
+                </button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
