welcome part and map box added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,37 @@
             </div>
         </div>
     </section>
+
+
+    <section class="portfolioWelcome">
+        <div class="main-section">
+            <div>
+                <h2 class="portfolioWelcomeText">
+                    Welcome to your next website!
+                </h2>
+            </div>
+            <div>
+                <button class="findOut">
+                    Download Now!
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="map">
+            <iframe
+                src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Twitter,+I…tter,+Inc.,+Market+Street,+San+Francisco,+CA&t=m&z=15&iwloc=A&output=embed"></iframe>
+
+            </iframe>
+            <br>
+            <small>
+                <a
+                    href="https://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=Twitter,…e=UTF8&hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&t=m&z=15&iwloc=A"></a>
+
+            </small>
+        </div>
+    </section>
 </body>
 
 </html>
