recent project and offer parts added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Document</title>
 </head>
 
@@ -63,6 +65,90 @@
         </div>
     </section>
 
+    <section class="portfolioOffer">
+        <div class="main-section">
+            <div>
+                <p class="serviceText">
+                    Service
+                </p>
+            </div>
+            <div>
+                <h2 class="portfoliOfferText">
+                    What We Offer
+                </h2>
+            </div>
+            <div class="icons">
+                <div class="icons_content">
+                    <div class="icons_content-iconsItems">
+                        <div class="material-symbols-outlined">
+                            thumb_up
+                        </div>
+                    </div>
+                    <div>
+                        <p>
+                            Favorited
+                        </p>
+                    </div>
+                    <div>
+                        <span>
+                            Millions of users Start Bootstrap!
+                        </span>
+                    </div>
+                </div>
+                <div class="icons_content">
+                    <div class="icons_content-iconsItems">
+                        <div class="material-symbols-outlined">
+                            thumb_up
+                        </div>
+                    </div>
+                    <div>
+                        <p>
+                            Favorited
+                        </p>
+                    </div>
+                    <div>
+                        <span>
+                            Millions of users Start Bootstrap!
+                        </span>
+                    </div>
+                </div>
+                <div class="icons_content">
+                    <div class="icons_content-iconsItems">
+                        <div class="material-symbols-outlined">
+                            thumb_up
+                        </div>
+                    </div>
+                    <div>
+                        <p>
+                            Favorited
+                        </p>
+                    </div>
+                    <div>
+                        <span>
+                            Millions of users Start Bootstrap!
+                        </span>
+                    </div>
+                </div>
+                <div class="icons_content">
+                    <div class="icons_content-iconsItems">
+                        <div class="material-symbols-outlined">
+                            thumb_up
+                        </div>
+                    </div>
+                    <div>
+                        <p>
+                            Favorited
+                        </p>
+                    </div>
+                    <div>
+                        <span>
+                            Millions of users Start Bootstrap!
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="portfolioWelcome">
         <div class="main-section">
@@ -78,7 +164,20 @@
             </div>
         </div>
     </section>
-
+    <section class="portfolioRecent">
+        <div class="main-section">
+            <div>
+                <p class="serviceText">
+                    Portfolio
+                </p>
+            </div>
+            <div>
+                <h2>
+                    Recent Projects
+                </h2>
+            </div>
+        </div>
+    </section>
     <section>
         <div class="map">
             <iframe
