responsive design added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </path>
             </svg>
         </div>
-        <div class="main-section">
+        <div class="main-sectionMob">
             <div>
                 <h1 class="portfolioText">
                     Stylish Portfolio
@@ -164,6 +164,7 @@
             </div>
         </div>
     </section>
+
     <section class="portfolioRecent">
         <div class="main-section">
             <div>
@@ -178,6 +179,45 @@
             </div>
         </div>
     </section>
+
+    <section class="blogs">
+        <div class="image">
+            <div class="image1">
+                <!-- <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-1.jpg" alt="img"> -->
+            </div>
+            <div class="image2">
+                <!-- <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-2.jpg" alt="img"> -->
+            </div>
+        </div>
+        <div class="image">
+            <div class="image3">
+                <!-- <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-3.jpg" alt="img"> -->
+            </div>
+            <div class="image4">
+                <!-- <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-4.jpg" alt="img"> -->
+            </div>
+        </div>
+    </section>
+
+
+    <section class="portfolioOffer">
+        <div class="main-section">
+            <div>
+                <h2 class="portfoliOfferText">
+                    The buttons below are impossible to resist...
+                </h2>
+            </div>
+            <div class="buttons">
+                <button class="click">
+                    Click Me!
+                </button>
+                <button class="look">
+                    Look at Me!
+                </button>
+            </div>
+        </div>
+    </section>
+
     <section>
         <div class="map">
             <iframe
@@ -190,6 +230,28 @@
                     href="https://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=Twitter,…e=UTF8&hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&t=m&z=15&iwloc=A"></a>
 
             </small>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="main-section">
+            <div class="main-social">
+                <div class="social">
+                    <div class="material-symbols-outlined">
+                        thumb_up
+                    </div>
+                </div>
+                <div class="social">
+                    <div class="material-symbols-outlined">
+                        thumb_up
+                    </div>
+                </div>
+                <div class="social">
+                    <div class="material-symbols-outlined">
+                        thumb_up
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
