--- a/index.html
+++ b/index.html
@@ -254,6 +254,14 @@
             </div>
         </div>
     </section>
+
+    <section class="copy">
+        <div>
+            <p>
+                Copyright © Your Website 2023
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>
